--- a/.github/workflows/push-gem.yml
+++ b/.github/workflows/push-gem.yml
@@ -6,91 +6,39 @@ on:
       - 'v*'
 
 jobs:
-  rspec-ruby25:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Ruby 2.5
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.5.x
-      - name: Run RSpec
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec rspec
-
-  rubocop-ruby25:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Ruby 2.5
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.5.x
-      - name: Run rubocop
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec rubocop
-
-  rspec-ruby27:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Ruby 2.7
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.7.x
-      - name: Run RSpec
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec rspec
-
-  rubocop-ruby27:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Ruby 2.7
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.7.x
-      - name: Run rubocop
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec rubocop
-
   push-gem:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: Set up Ruby 2.5
+      - uses: actions/checkout@v3
+      - name: Set up Ruby 3.0
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 2.5.x
-      - name: Build gem
+          ruby-version: 3.0
+
+      - name: Install dependencies
         run: |
           gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec rake build
+          bundle install
+
       - name: Push to GitHub Package Repository
         run: |
           mkdir -p $HOME/.gem
-          echo ":github: Bearer $GEM_HOST_API_KEY" >> $HOME/.gem/credentials
+          touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
-          bundle exec rake build
-          gem push --key github --host https://rubygems.pkg.github.com/Skudo pkg/`ls -1t pkg | head -1`
+          printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          gem build *.gemspec
+          gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
         env:
-          GEM_HOST_API_KEY: ${{secrets.GH_AUTH_TOKEN}}
-          OWNER: username
+          GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
+          OWNER: ${{ github.repository_owner }}
+
       - name: Push to RubyGems
         run: |
           mkdir -p $HOME/.gem
-          echo ":rubygems_api_key: $GEM_HOST_API_KEY" >> ~/.gem/credentials
+          touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
-          bundle exec rake build
-          gem push pkg/`ls -1t pkg | head -1`
+          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
+          gem build *.gemspec
+          gem push *.gem
         env:
-          GEM_HOST_API_KEY: ${{secrets.RUBYGEMS_AUTH_TOKEN}}
+          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
